#4618: lighthouse fixes - breadcrumb link size issue fix - accessibility fixes (header size order) - mobile table font size fix - moved comments in json above the line for better readability on smaller screens

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,12 +3,20 @@
     font-size: 18px;
 
     .anchor-heading {
-      height: 1.75rem;
-      width: 1.75rem;
+      height: 1.75rem !important;
+      width: 1.75rem !important;
+    }
+
+    td {
+      font-size: 12px !important;
     }
   }
 }
 
 .site-footer {
   color: #5f5f5f
+}
+
+.breadcrumb-nav-list-item {
+  font-size: 16px !important;
 }
